# crea_graphics_python

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: test.yml
src/crea_graphics/colors/: __init__.py  crea_colors.py  custom_colorpalettes.py  functions.py
src/crea_graphics/figures/: __init__.py  figtools.py
src/crea_graphics/geotiff/: __init__.py  make_geotiff.py
tests/: test_import_colors.py  test_import_figtools.py  test_import_geotiff.py
