[tool.poetry]
name = "crea_graphics"
version = "0.1.0"
description = ""
authors = ["rosa <rosa@energyandcleanair.org>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
xarray = "^2024.7.0"
numpy = "^2.0.2"
matplotlib = "^3.9.2"
rasterio = "^1.3.10"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
