[tool.poetry]
name = "crea_graphics"
version = "0.1.1"
description = ""
authors = ["Data-team <data-team@energyandcleanair.org>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
xarray = "^2024.7.0"
numpy = "^2.0.2"
matplotlib = "^3.9.2"
rasterio = "^1.3.10"


[tool.poetry.group.dev.dependencies]
pytest = "^8.3.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
